cli/tests/ui/use_unknown_environment.stderr
Error: manifest::unknown_use_environment

  × check failed
  ╰─▶ use `#wrapper` references unknown environment `missing`
   ╭─[<CARGO_MANIFEST_DIR>/tests/ui/use_unknown_environment.json5:6:20]
 5 │       manifest: "https://example.com/wrapper.json5",
 6 │       environment: "missing",
   ·                    ────┬────
   ·                        ╰── unknown environment referenced here
 7 │     },
   ╰────
